--- a/CloudService/CloudService/Base.lproj/Main.storyboard
+++ b/CloudService/CloudService/Base.lproj/Main.storyboard
@@ -51,6 +51,9 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <segue destination="ynK-X6-WEz" kind="modal" identifier="login" id="BW2-DM-Pu0"/>
+                                        </connections>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rmt-vQ-TTC">
                                         <rect key="frame" x="10" y="40" width="293" height="40"/>
@@ -185,12 +188,11 @@
                         <outlet property="inputView" destination="vHH-zz-iXo" id="zkz-c9-ufw"/>
                         <outlet property="loginBtn" destination="KW6-Fn-8rL" id="rtH-yA-4HD"/>
                         <outlet property="pwdTextFiled" destination="Rmt-vQ-TTC" id="2dx-nW-oMk"/>
-                        <segue destination="qX7-op-fDe" kind="modal" identifier="login" id="jwF-tE-Dpv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-224.5" y="-373.5"/>
+            <point key="canvasLocation" x="-212.5" y="-443.5"/>
         </scene>
         <!--Register Suc View Controller-->
         <scene sceneID="NwW-8x-FkO">
@@ -254,6 +256,7 @@
                                 </state>
                                 <connections>
                                     <action selector="gotoMenuAction:" destination="htK-Rd-sEF" eventType="touchUpInside" id="9Oc-TG-mt1"/>
+                                    <segue destination="ynK-X6-WEz" kind="modal" identifier="" id="qEG-h7-PTb"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -287,12 +290,11 @@
                     <connections>
                         <outlet property="inputBtn" destination="RBW-Ea-6xB" id="i2q-o3-nha"/>
                         <outlet property="pushMenuBtn" destination="aBt-FC-RA3" id="1Ou-em-B5N"/>
-                        <segue destination="qX7-op-fDe" kind="modal" identifier="registerToMenuView" id="uIb-hf-FE8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJW-vo-tnH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-336.5" y="1205.5"/>
+            <point key="canvasLocation" x="-236.5" y="1209.5"/>
         </scene>
         <!--填写个人资料-->
         <scene sceneID="4ao-lA-r92">
@@ -331,7 +333,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DSv-2H-jig" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="163.5" y="1191.5"/>
+            <point key="canvasLocation" x="310.5" y="1027.5"/>
         </scene>
         <!--注册-->
         <scene sceneID="Alk-RV-aEW">
@@ -650,13 +652,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="DRu-8S-KMC"/>
+                    <tabBarItem key="tabBarItem" title="首页" id="DRu-8S-KMC"/>
                     <navigationItem key="navigationItem" title="首页" id="nfR-qK-uD8"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQW-HY-y8x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1173.5" y="-907.5"/>
+            <point key="canvasLocation" x="1255.5" y="-1012.5"/>
         </scene>
         <!--订单管理-->
         <scene sceneID="En5-ls-5mo">
@@ -677,16 +679,37 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" id="pF1-o9-cab"/>
+                    <tabBarItem key="tabBarItem" title="订单管理" id="pF1-o9-cab"/>
                     <navigationItem key="navigationItem" title="订单管理" id="4R5-gg-bDG"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="pageView" destination="2fE-ZY-gNK" id="xcD-0b-61R"/>
+                        <segue destination="nWe-z1-RRx" kind="push" identifier="searchOrder" id="YSw-6b-qmW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DF7-Ey-5Os" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1236.5" y="-159.5"/>
+            <point key="canvasLocation" x="1278.5" y="-292.5"/>
+        </scene>
+        <!--Search Order View Controller-->
+        <scene sceneID="yOl-CL-eyO">
+            <objects>
+                <viewController id="nWe-z1-RRx" customClass="SearchOrderViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3iX-gp-FqW"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZwC-cg-R5e"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wjG-Uy-b5v">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xQz-8G-THp"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5iS-I2-iuC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1864.5" y="-384.5"/>
         </scene>
         <!--个人中心-->
         <scene sceneID="kog-Di-h4W">
@@ -701,13 +724,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="uw4-yg-oo8"/>
+                    <tabBarItem key="tabBarItem" title="个人中心" id="uw4-yg-oo8"/>
                     <navigationItem key="navigationItem" title="个人中心" id="KMz-Uf-fpm"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aH7-vn-Ake" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1242.5" y="1487.5"/>
+            <point key="canvasLocation" x="1278.5" y="1105.5"/>
         </scene>
         <!--业绩查询-->
         <scene sceneID="HuU-F7-NKA">
@@ -728,27 +751,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8og-qv-kWh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1266.5" y="705.5"/>
-        </scene>
-        <!--订单管理导航条-->
-        <scene sceneID="bl0-Z1-wck">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rbb-VH-Crx" userLabel="订单管理导航条" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="订单管理" id="5i9-lC-2fT"/>
-                    <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="bIC-ve-OEk">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ouT-BD-X5h" kind="relationship" relationship="rootViewController" id="lHI-dR-DsD"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ve5-zb-dAc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="690.5" y="-132.5"/>
+            <point key="canvasLocation" x="1265.5" y="628.5"/>
         </scene>
         <!--Base Tab Bar View Controller-->
         <scene sceneID="AOh-fO-AaT">
@@ -762,15 +765,15 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ynK-X6-WEz" kind="relationship" relationship="viewControllers" id="RuJ-Br-WL2"/>
-                        <segue destination="rbb-VH-Crx" kind="relationship" relationship="viewControllers" id="BYC-9Z-fyb"/>
-                        <segue destination="IOv-lS-Fb6" kind="relationship" relationship="viewControllers" id="7Rq-e1-vua"/>
-                        <segue destination="E4A-5t-SJI" kind="relationship" relationship="viewControllers" id="HI6-1y-ZzD"/>
+                        <segue destination="jcF-5w-02F" kind="relationship" relationship="viewControllers" id="ecX-jZ-Zia"/>
+                        <segue destination="ouT-BD-X5h" kind="relationship" relationship="viewControllers" id="FiY-cB-glE"/>
+                        <segue destination="ZqX-b8-LiQ" kind="relationship" relationship="viewControllers" id="Lrd-fY-bOD"/>
+                        <segue destination="3dY-Jo-m2V" kind="relationship" relationship="viewControllers" id="aJe-5g-ziS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c5l-B0-GOa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="403.5" y="186.5"/>
+            <point key="canvasLocation" x="778.5" y="-266.5"/>
         </scene>
         <!--首页导航条-->
         <scene sceneID="HDM-0L-Ee9">
@@ -785,58 +788,18 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="jcF-5w-02F" kind="relationship" relationship="rootViewController" id="Fst-9u-Mqb"/>
+                        <segue destination="qX7-op-fDe" kind="relationship" relationship="rootViewController" id="yVO-hC-xqL"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nbz-iM-kPv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="656.5" y="-879.5"/>
-        </scene>
-        <!--业绩查询导航条-->
-        <scene sceneID="Jrw-Gv-CjL">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IOv-lS-Fb6" userLabel="业绩查询导航条" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="业绩查询" id="b4I-Of-qHV"/>
-                    <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="TqI-5Z-Uc1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ZqX-b8-LiQ" kind="relationship" relationship="rootViewController" id="eOP-ez-3as"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7oD-sb-PBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="739.5" y="667.5"/>
-        </scene>
-        <!--个人中心导航条-->
-        <scene sceneID="7QF-LM-43P">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E4A-5t-SJI" userLabel="个人中心导航条" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="个人中心" id="CRs-LG-0kV"/>
-                    <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="iqk-O7-1H9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="3dY-Jo-m2V" kind="relationship" relationship="rootViewController" id="AAZ-wI-ejO"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QYM-re-BF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="674.5" y="1478.5"/>
+            <point key="canvasLocation" x="343.5" y="284.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="ceshi.png" width="610" height="338"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="uIb-hf-FE8"/>
+        <segue reference="qEG-h7-PTb"/>
     </inferredMetricsTieBreakers>
 </document>
